unpackaged/main/default/objects/Attendee_Tracking__c/Attendee_Tracking__c.object-meta.xml
<CustomObject>
    <description>R164076</description>
    <label>Attendee Tracking</label>
    <nameField>
        <label>Attendee Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendee Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>