unpackaged/main/default/objects/Attendee_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>R164076</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendee Tracking</relationshipLabel>
    <relationshipName>Attendee_Tracking</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>