unpackaged/main/default/objects/Attendee_Tracking__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>R164076</description>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>