unpackaged/main/default/objects/Attendee_Tracking__c/fields/Actual_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_Time__c</fullName>
    <description>R164076</description>
    <label>Actual Start Date/Time</label>
    <type>DateTime</type>
</CustomField>