unpackaged/main/default/objects/Attendee_Tracking__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description>R164076</description>
    <label>Attended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>