unpackaged/main/default/objects/Attendee_Tracking__c/fields/Attended_Number__c.field-meta.xml
<CustomField>
    <fullName>Attended_Number__c</fullName>
    <description>R164076</description>
    <label># Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>