unpackaged/main/default/objects/Attendee_Tracking__c/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <description>R164076</description>
    <label>Duration (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>