unpackaged/main/default/objects/Attendee_Tracking__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>R164076</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>