unpackaged/main/default/objects/Attendee_Tracking__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>R164076</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>