unpackaged/main/default/objects/Attendee_Tracking__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>R166336</description>
    <formula>Contact__r.FirstName  &amp; &quot;&quot; &amp;  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>