unpackaged/main/default/objects/Attendee_Tracking__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>R164076</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>