unpackaged/main/default/objects/Attendee_Tracking__c/fields/Like_to_be_Covered__c.field-meta.xml
<CustomField>
    <fullName>Like_to_be_Covered__c</fullName>
    <description>R164076</description>
    <label>Like to be Covered?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>