unpackaged/main/default/objects/Attendee_Tracking__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>R164076</description>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>