unpackaged/main/default/objects/Attendee_Tracking__c/fields/Poll_Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Poll_Answer_2__c</fullName>
    <description>R177770</description>
    <label>Poll Answer 2</label>
    <type>TextArea</type>
</CustomField>