unpackaged/main/default/objects/Attendee_Tracking__c/fields/Poll_Answer__c.field-meta.xml
<CustomField>
    <fullName>Poll_Answer__c</fullName>
    <description>R164076</description>
    <label>Poll Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>