unpackaged/main/default/objects/Attendee_Tracking__c/fields/Poll_Question__c.field-meta.xml
<CustomField>
    <fullName>Poll_Question__c</fullName>
    <description>R164076</description>
    <label>Poll Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>