unpackaged/main/default/objects/Attendee_Tracking__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <description>R164076</description>
    <label># Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>