unpackaged/main/default/objects/Attendee_Tracking__c/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <description>R164076</description>
    <label>Registration Date/Time</label>
    <type>DateTime</type>
</CustomField>