unpackaged/main/default/objects/Attendee_Tracking__c/fields/Time_in_Session_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Session_In_Minutes__c</fullName>
    <description>R164076</description>
    <label>Time in Session (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>