unpackaged/main/default/objects/Attendee_Tracking__c/fields/Training_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_ID__c</fullName>
    <description>R165076</description>
    <label>Training ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>