unpackaged/main/default/objects/Attendee_Tracking__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <description>R164076</description>
    <label>Training</label>
</RecordType>