unpackaged/main/default/objects/Attendee_Tracking__c/recordTypes/Webinar.recordType-meta.xml
<RecordType>
    <fullName>Webinar</fullName>
    <active>true</active>
    <description>R165035</description>
    <label>Webinar</label>
</RecordType>